--- a/android/src/main/res/layout/ios_clone.xml
+++ b/android/src/main/res/layout/ios_clone.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         >
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/empty_start"
             android:tag="empty_start"
             android:layout_weight="4"
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             custom:npv_DividerColor="#cccccc"
             />
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/year"
             android:layout_weight="1"
             android:tag="year"
@@ -40,7 +40,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true" />
 
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/month"
             android:layout_weight="1"
             android:tag="month"
@@ -58,7 +58,7 @@
             android:focusableInTouchMode="true"
             />
 
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/date"
             android:tag="date"
             android:layout_weight="1"
@@ -75,7 +75,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             />
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/day"
             android:tag="day"
             android:layout_height="match_parent"
@@ -91,7 +91,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             />
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/hour"
             android:tag="hour"
             android:layout_height="match_parent"
@@ -108,7 +108,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             />
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/minutes"
             android:tag="minutes"
             android:layout_weight="1"
@@ -126,7 +126,7 @@
             android:focusableInTouchMode="true"
         />
 
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/ampm"
             android:tag="ampm"
             android:layout_weight="1"
@@ -144,7 +144,7 @@
             android:focusableInTouchMode="true"
             />
             
-        <com.sipsiripawit.date_picker.pickers.IosClone
+        <com.henninghall.date_picker.pickers.IosClone
             android:id="@+id/empty_end"
             android:tag="empty_end"
             android:layout_weight="4"
